# projeto-integrado-tees

./: LICENSE  README.md  ci.sh  compose.yaml  env.example  pyproject.toml
.github/workflows/: ci.yml
data/: 1608472474770322.xml
migrations/: 20260517_01_s3Zna.sql
scripts/: ci.sh  dev.sh
src/: app.py  main.py  settings.py
src/domain/paper/: models.py  paper_dao.py  paper_service.py
src/domain/researcher/: models.py  researcher_dao.py  researcher_service.py
src/ingest/: README.md  file_lister.py  loader.py
src/ingest/extractor/: extractor.py  models.py
src/ingest/loader/: loader.py  models.py
test/: conftest.py  test_extractor.py  test_file_lister.py  test_loader.py
